V 
* features
- 
* bug fixes
- 

V 3.2.0
* features
- allow special cpu setting during profile switch
* bug fixes
- use added configuration as the current one
- files only be read by root in some devices (JackieKu)

V 3.1.4
* features
- 
* bug fixes
- fixes ICS crashes (should fix HC as well)
- fix insert as new for configuration autoload

V 3.1.3
* features
- 
* bug fixes
- fixes

V 3.1.2
* features
- 
* bug fixes
- fix force closes

V 3.1.1
* features
- 
* bug fixes
- fix manual service changes getting confused by service state leave
- fix force closes

V 3.1.0 
* features
- background is more resistant to being killed
- switch log uses DB
- new advanced switch log with clear and mark (adv stats)
- refresh "current" view  
- extensions can be disabled 
* bug fixes
- save after insert as new
. force closes

V 3.0.2
* features
- 
* bug fixes
- minor fixes

V 3.0.1
* features
- 
* bug fixes
- minor fixes

V 3.0.0
* features
- new swipe friendly user interface
- rework backend and use background process to do the work
- initalise cpu tuner from (default) configurations 
- on power is stronger screen locked by default (enable the old sequence in settings) 
- insert as new: copy and insert an entry 
- editor close does sanity checks and asks the user or does not save
- separate statics and profile switch log and update on click
- pulsed services do not restart sequence on profile switch and allow initial delay
- cpu tuner can be added to the statusbar while not running
- new extension framework
- graphical statistics (as extension)
- lots of other things
* bug fixes
- start/stop notification entry on enable/disable
- fix layout error on orientation change
- label powersave bias
- save but do not apply on editor close when cpu tuner is disabled
- fix battery hot and call in progress profile if none is set
- more fixes

V 2.7.8
* features
- optimised configuration handling
* bug fixes
- fixes

V 2.7.7
* features
- 
* bug fixes
- load default values on first boot