@@ -22,9 +22,13 @@ public class CallPhoneStateListener extends PhoneStateListener {
 	@Override
 	public void onCallStateChanged(int state, String incomingNumber) {
 		super.onCallStateChanged(state, incomingNumber);
-		Intent i = new Intent(TunerService.ACTION_TUNERSERVICE_PHONESTATE);
-		i.putExtra(TunerService.EXTRA_PHONE_STATE, state);
-		context.startService(i);
+		if (true) {
+			TunerService.handlePhoneState(context, state);
+		} else {
+			Intent i = new Intent(TunerService.ACTION_TUNERSERVICE_PHONESTATE);
+			i.putExtra(TunerService.EXTRA_PHONE_STATE, state);
+			context.startService(i);
+		}
 	}
 
 	public static void register(Context context) {
